circleci maven full log